--- a/paginas/Contacto.html
+++ b/paginas/Contacto.html
@@ -5,10 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>contacto</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+    <link rel="stylesheet" href="/Hoja_de_vida/CSS/style2.css">
 </head>
 <body>
 
-    <nav>
+    <section>
         <ol>
             <h3>Barra de navegación</h3>
             <a href="../index.html">
@@ -26,7 +27,7 @@
                     <li>Habilidades<i class="fas fa-laptop-code"></i></li>
                     </a>
         </ol>
-    </nav>
+    </section>
     
     <section>
 
