--- a/paginas/educacion.html
+++ b/paginas/educacion.html
@@ -5,29 +5,38 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>educacion</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+    <link rel="stylesheet" href="/CSS/style2.css">
 </head>
+
 <body> 
 
-    <nav>
-        <ol>
-            <h3>Barra de navegación</h3>
-            <a href="../index.html">
-                Inicio
-            </a>
-            <a href="./Contacto.html"> 
-                <li> Contacto   <i class="fas fa-envelope"></i></li> 
-                </a>
-            <a href="./educacion.html">
-                <li>Educacion   <i class="fas fa-graduation-cap"></i></li>
-                </a>
-            <a href="./referencias.html">
-                <li>Referencias   <i class="fas fa-users"></i></li>
-                </a>
-            <a href="./habilidades.html">
-                <li>Habilidades<i class="fas fa-laptop-code"></i></li>
-                </a>
-        </ol>
-    </nav>
+    <header>
+        
+        <div class="bienvenido">
+            <h1 class="titulo">Barra de navegación -- Jorge Isaac Espitia Cardozo</h1>
+        </div>
+
+            <nav>
+                <ol>  
+                    <a href="../index.html">
+                        <li>Inicio <i class="fas fa-home"></i></li> 
+                        </a>
+                    <a href="Contacto.html"> 
+                        <li> Contacto   <i class="fas fa-envelope"></i></li> 
+                        </a>
+                    <a href="educacion.html">
+                        <li>Educacion   <i class="fas fa-graduation-cap"></i></li>
+                        </a>
+                    <a href="referencias.html">
+                        <li>Referencias   <i class="fas fa-users"></i></li>
+                        </a>
+                    <a href="habilidades.html">
+                        <li>Habilidades<i class="fas fa-laptop-code"></i></li>
+                        </a>
+                </ol>
+            </nav>
+
+    </header>
     
     <section>
 
