--- a/paginas/ejemplo.html
+++ b/paginas/ejemplo.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="/Hoja_de_vida/CSS/ejemplo.css">
+    <link rel="stylesheet" href="/CSS/ejemplo.css">
 </head>
 <body>
     <header>
