--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" cont ent="width=device-width, initial-scale=1.0">
     <title>Hoja de vida INDEX</title>
     <link rel="stylesheet" href="CSS/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
@@ -37,7 +37,7 @@
     
     <section class="cont1">
         <p class="p1">
-            El propósito de esta pagina web es dar a conocer la hoja de vida o curriculun de Jorge Isaac Espitia Cardozo de una manera en la que el espectador pueda acceder a la información de una manera comoda y sencilla de analisar, Aquí podrá encontrar la detalladamente la hoja de vida y todos sus complementos que refieren a la vida laboral, logros habilidades o titulos de Jorge Espitia. </p>
+            El propósito de esta pagina web es dar a conocer el curriculun de Jorge Isaac Espitia Cardozo de una manera en la que se pueda acceder a la información de una manera comoda y sencilla de analisar, Aquí podrá encontrar la detalladamente la hoja de vida y todos sus complementos que refieren a la vida laboral de Jorge Espitia. </p>
             
             <p class="p2">
             Este sitio web esta dividido o separado por secciones así que, En la barra de navegación podra elegir hacia que lugares de esta pagina web podrá usted dirijirse para conocer los diferentes aspectos que conforman la hoja de vida.</p>
