--- a/paginas/Contacto.html
+++ b/paginas/Contacto.html
@@ -1,43 +1,52 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>contacto</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
-    <link rel="stylesheet" href="/Hoja_de_vida/CSS/style2.css">
+    <link rel="stylesheet" href="/CSS/style2.css">
 </head>
 <body>
 
-    <section>
-        <ol>
-            <h3>Barra de navegación</h3>
-            <a href="../index.html">
-                Inicio
-                <a href="./Contacto.html"> 
-                    <li> Contacto   <i class="fas fa-envelope"></i></li> 
-                    </a>
-                <a href="./educacion.html">
-                    <li>Educacion   <i class="fas fa-graduation-cap"></i></li>
-                    </a>
-                <a href="./referencias.html">
-                    <li>Referencias   <i class="fas fa-users"></i></li>
-                    </a>
-                <a href="./habilidades.html">
-                    <li>Habilidades<i class="fas fa-laptop-code"></i></li>
-                    </a>
-        </ol>
-    </section>
+    <header>
+        
+        <div class="bienvenido">
+            <h1 class="titulo">Barra de navegación | Jorge Isaac Espitia Cardozo</h1>
+        </div>
+
+            <nav>
+                <ol>  
+                    <a href="../index.html">
+                        <li>Inicio <i class="fas fa-home"></i></li> 
+                        </a>
+                    <a href="Contacto.html"> 
+                        <li> Contacto   <i class="fas fa-envelope"></i></li> 
+                        </a>
+                    <a href="educacion.html">
+                        <li>Educacion   <i class="fas fa-graduation-cap"></i></li>
+                        </a>
+                    <a href="referencias.html">
+                        <li>Referencias   <i class="fas fa-users"></i></li>
+                        </a>
+                    <a href="habilidades.html">
+                        <li>Habilidades<i class="fas fa-laptop-code"></i></li>
+                        </a>
+                </ol>
+            </nav>
+
+    </header>
     
     <section>
-
         <ul>
-            <h2>Contacto</h2>
-            <li>📱 (57) 3022700319</li>
-            <li>🚩 San Francisco</li>
-            <li>✉️ espitiacardo2007@gmail.com</li>
+            <h2 class="contacto">CONTACTO</h2>
+            <li> <p>Este es el numero telefonico por el cual podra comunicarse directamente conmigo ya sea atravez de una llamada o empezando un chat de conservación por Whatsapp</p> <br>
+                📱 (57) 3022700319</li>
+            <li> <p></p> <br>
+                🚩 San Francisco</li>
+            <li> <p></p> <br>
+                ✉️ espitiacardo2007@gmail.com</li>
         </ul>
-
     </section>
 
     <footer>
