--- a/paginas/habilidades.html
+++ b/paginas/habilidades.html
@@ -17,7 +17,7 @@
 
             <nav>
                 <ol>  
-                    <a href="../index.html">
+                    <a href="../index.html" class="inicio">
                         <li>Inicio <i class="fas fa-home"></i></li> 
                         </a>
                     <a href="Contacto.html"> 
