--- a/paginas/form.html
+++ b/paginas/form.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+    <link rel="stylesheet" href="../CSS/form.css">
 </head>
     <title>Formulario</title>
 
@@ -15,56 +16,59 @@
     </script>
 </head>
 <body>
-    <h1>Formulario de contacto</h1>
-            <form action="" name="" method="get">
+    <main>
+        <h1>Formulario de contacto</h1>
+        <form action="" name="" method="get">
 
-                <label for="nombre">Nombre</label>
-                <input type="text" id="nombre" name="nombre" placeholder="Nombre de la empresa"> <!-- <br>
-                <input type="submit" value="Enviar Name"> -->
-                <br> <br>
+            <label for="nombre">Nombre</label>
+            <input type="text" id="nombre" name="nombre" placeholder="Nombre de la empresa" required> <!-- <br>
+            <input type="submit" value="Enviar Name"> -->
+            <br> <br>
 
-                <label for="nombre2">Nombre del reclutador</label>
-                <input type="text" id="nombre2" name="nombre2" placeholder="Nombre del funcionario"> <!-- <br>
-                <input type="submit" value="Enviar Name2"> -->
-                <br> <br>
+            <label for="nombre2">Nombre del reclutador</label>
+            <input type="text" id="nombre2" name="nombre2" placeholder="Nombre del funcionario" required> <!-- <br>
+            <input type="submit" value="Enviar Name2"> -->
+            <br> <br>
 
-                <label for="direccion">Direccion</label>
-                <input type="text" id="direccion" name="direccion" placeholder="Direccion de la empresa"> <!-- <br>
-                <input type="button" value="enviar Direccion"> -->
-                <br> <br>
+            <label for="direccion">Direccion</label>
+            <input type="text" id="direccion" name="direccion" placeholder="Direccion de la empresa" required> <!-- <br>
+            <input type="button" value="enviar Direccion"> -->
+            <br> <br>
 
-                <label for="edad">Numero</label>
-                <input type="number" id="edad" name="edad" placeholder="Telefono de contacto"> <!-- <br>
-                <button name="edad" id="edad">Enviar edad</button> -->
-                <br><br>
+            <label for="edad">Numero</label>
+            <input type="number" id="edad" name="edad" placeholder="Telefono de contacto" required> <!-- <br>
+            <button name="edad" id="edad">Enviar edad</button> -->
+            <br><br>
 
-                <label for="email">Email</label>
-                <input type="email" id="email" name="email" placeholder="Correo de contacto">
-                <br><br>
+            <label for="email">Email</label>
+            <input type="email" id="email" name="email" placeholder="Correo de contacto" required>
+            <br><br>
 
-               <!--  <label for="fecha"></label>
-                <input type="date" id="fecha" name="fecha">
-                <br><br> -->
+           <!--  <label for="fecha"></label>
+            <input type="date" id="fecha" name="fecha">
+            <br><br> -->
 
-                <!-- <label for="">Clave</label>
-                <input type="password">
-                <br><br> -->
+            <!-- <label for="">Clave</label>
+            <input type="password">
+            <br><br> -->
 
-                <button name="nombre" id="nombre" type="submit">Enviar datos</button> <br><br>
-                <button name="volver" id="volver" onclick="redireccionar(); return false;"
-                >Volver al inicio</button> <br> <br>
-                <button name="reset" id="reset" type="reset">Limpiar</button>
+            <button name="nombre" id="nombre" type="submit">Enviar datos</button> <br><br>
+            <button name="volver" id="volver" onclick="redireccionar(); return false;"
+            >Volver al inicio</button> <br> <br>
+            <button name="reset" id="reset" type="reset">Limpiar</button>
 
-                <select name="select" id="select">
-                    <option value="1" class="opcion">opcion 1</option>
-                    <option value="2" class="opcion">opcion 2</option>
-                    <option value="3" class="opcion">opcion 3</option>
-                    <option value="4" class="opcion">opcion 4</option>
-                </select>
-            </form>
+            <select name="select" id="select">
+                <option value="1" class="opcion">opcion 1</option>
+                <option value="2" class="opcion">opcion 2</option>
+                <option value="3" class="opcion">opcion 3</option>
+                <option value="4" class="opcion">opcion 4</option>
+            </select>
+        </form>
+    </main>
+    <footer>
+        &copy; Desde el 2024
+    </footer>
 
-            <footer>
-                &copy; Desde el 2024
-            </footer>
+            
 </body>
 </html>
