--- a/paginas/educacion.html
+++ b/paginas/educacion.html
@@ -67,16 +67,16 @@
             <nav>
                 <ol>  
                     <a href="../index.html" class="inicio">
-                        <li>Inicio <i class="fas fa-home"></i></li> 
+                        <li>Inicio<i class="fas fa-home"></i></li> 
                         </a>
                     <a href="Contacto.html"> 
-                        <li> Contacto   <i class="fas fa-envelope"></i></li> 
+                        <li>Contacto<i class="fas fa-envelope"></i></li> 
                         </a>
                     <a href="educacion.html">
-                        <li>Educacion   <i class="fas fa-graduation-cap"></i></li>
+                        <li>Educacion<i class="fas fa-graduation-cap"></i></li>
                         </a>
                     <a href="referencias.html">
-                        <li>Referencias   <i class="fas fa-users"></i></li>
+                        <li>Referencias<i class="fas fa-users"></i></li>
                         </a>
                     <a href="habilidades.html">
                         <li>Habilidades<i class="fas fa-laptop-code"></i></li>
@@ -91,7 +91,7 @@
 
         <div class="descrip">
             <p>
-                En la siguiente tabla que aparece a continuacion se puede visualizar los estudios academicos que he tenido a lo largo de mi vida, es decir, los lugares en los que me he capacitado practicado y adquirido conocimiento la tabla esta dividida por su encabezado donde se muestran el año, el lugar donde adquiri el estudio y conocimiento y finalmente el titulo obtenido.
+                En la siguiente tabla que aparece a continuación se pueden visualizar los estudios académicos que he tenido a lo largo de mi vida, es decir, los lugares en los que me he capacitado practicado y adquirido conocimiento la tabla está dividida por su encabezado donde se muestran el año, el lugar donde adquiri el estudio y conocimiento y finalmente el titulo obtenido.
             </p>
         </div>
 
@@ -105,7 +105,7 @@
                 </tr>
                 <tr>
                     <td>2011-2016</td>
-                    <td>I.E.D RICARDO GONZALES</td>
+                    <td>I.E.D RICARDO GONZÁLEZ</td>
                     <td>Primaria Básica</td>
                 </tr>
                 <tr>
@@ -120,7 +120,7 @@
                 </tr>
                 <tr>
                     <td>2022-2024</td>
-                    <td>Tecnólogo en Analisis y desarrllo de software
+                    <td>Tecnólogo en Análisis y desarrollo de software
                     </li></td>
                 </tr>
             </tbody>
