--- a/paginas/habilidades.html
+++ b/paginas/habilidades.html
@@ -18,16 +18,16 @@
             <nav>
                 <ol>  
                     <a href="../index.html" class="inicio">
-                        <li>Inicio <i class="fas fa-home"></i></li> 
+                        <li>Inicio<i class="fas fa-home"></i></li> 
                         </a>
                     <a href="Contacto.html"> 
-                        <li> Contacto   <i class="fas fa-envelope"></i></li> 
+                        <li> Contacto<i class="fas fa-envelope"></i></li> 
                         </a>
                     <a href="educacion.html">
-                        <li>Educacion   <i class="fas fa-graduation-cap"></i></li>
+                        <li>Educacion<i class="fas fa-graduation-cap"></i></li>
                         </a>
                     <a href="referencias.html">
-                        <li>Referencias   <i class="fas fa-users"></i></li>
+                        <li>Referencias<i class="fas fa-users"></i></li>
                         </a>
                     <a href="habilidades.html">
                         <li>Habilidades<i class="fas fa-laptop-code"></i></li>
@@ -42,16 +42,16 @@
         <ul class="habilidades">
             <li class="hab">Diseño <br>
                 <i></i><div class="barra1"></div>
-            <p class="phab">Me gusta diseñar, Aplico bien las paletas de colores, los espacios y la organizacion de los elementos que conforman la interfaz grafica de la aplicación o pagina web</p></li>
-            <li class="hab">Ingles <br>
+            <p class="phab">Me gusta diseñar, Aplico bien las paletas de colores, los espacios y la organización de los elementos que conforman la interfaz gráfica de la aplicación o página web</p></li>
+            <li class="hab">Inglés <br>
                 <i></i><div class="barra2"></div>
-            <p class="phab">Se los fundamentos basicos del lenguaje y algunas estructuras, mi fuerte principal es la lectura pero tambien puedo escuchar y hablar las palabras que tengo mas claras</p></li>
+            <p class="phab">Se los fundamentos basicos del lenguaje y algunas estructuras, mi fuerte principal es la lectura pero también puedo escuchar y hablar las palabras que tengo más claras</p></li>
             <li class="hab">Trabajo en Equipo <br>
                 <i></i><div class="barra3"></div>
             <p class="phab">Siempre he aconstumbrado a trabajar en compañia de un Equipo, tengo buena comunicación con las personas para que me entiendan y se manejar las diferentes situaciones</p></li>
             <li class="hab">Bases de datos <br>
                 <i></i><div class="barra4"></div>
-            <p class="phab">Siempre he tenido interes en la elaboración de las bases de datos, le he dedicado bastante tiempo y conozco bien como estructurar las tablas, sus relaciónes y crear consultas</p></li>
+            <p class="phab">Siempre he tenido interés en la elaboración de las bases de datos, le he dedicado bastante tiempo y conozco bien como estructurar las tablas, sus relaciónes y crear consultas</p></li>
         </ul>
     </section>
 
